log
Thu 21 Mar 2024 10:19:47 PM UTC: 
 tests:  0|5
total_score: 0/70
4201042
Thu 21 Mar 2024 10:42:39 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
4f8afc6
Thu 21 Mar 2024 10:57:16 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |     *dato = (int*)next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
0e5a495
Thu 21 Mar 2024 10:57:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
116896f
Thu 21 Mar 2024 11:07:22 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
849eaf9
Sat 23 Mar 2024 06:38:43 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  3|2
total_score: 40/70
4a7e573
Sat 23 Mar 2024 08:10:28 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
2078c1f
Sat 23 Mar 2024 08:12:08 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
28e93ed
Sat 23 Mar 2024 08:19:53 PM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|1
total_score: 50/70
252b1e5
Sat 23 Mar 2024 08:20:11 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|1
total_score: 50/70
f742d20
Sat 23 Mar 2024 08:20:42 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
3e82105
Sat 23 Mar 2024 08:26:43 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
fd39839
Sat 23 Mar 2024 08:27:30 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
d36dae4
Sat 23 Mar 2024 08:29:17 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
274fbfa
Sat 23 Mar 2024 08:31:06 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
74f3fac
Sat 23 Mar 2024 08:33:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e0c2113
Sat 23 Mar 2024 08:33:52 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|1
total_score: 50/70
1522400
Sat 23 Mar 2024 08:37:04 PM UTC: 
 exercises.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:127:24: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  127 |       if (letra == ')' && primLetra == '(' || letra == ']' &&
      |           ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
exercises.c:128:42: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  128 |         primLetra == '[' || letra == '}' && primLetra == '{') {
      |                             ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4793248
Sat 23 Mar 2024 08:37:51 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
d7a51d9
Sat 23 Mar 2024 08:40:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
28d49aa
Sat 23 Mar 2024 08:43:01 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
94923c5
Sat 23 Mar 2024 08:43:39 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:5: error: ‘primLetra’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  121 |     printf("%c %c", primLetra, letra);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a8f728
Sat 23 Mar 2024 08:43:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:17: error: format ‘%c’ expects a matching ‘int’ argument [-Werror=format=]
  121 |     printf("%c %c", letra);
      |                ~^
      |                 |
      |                 int
cc1: all warnings being treated as errors
Compilation failed
c86f8c1
Sat 23 Mar 2024 08:43:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
740ef58
Sat 23 Mar 2024 08:48:35 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|1
total_score: 50/70
2d0263b
Sat 23 Mar 2024 08:48:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
58d3f49
Sat 23 Mar 2024 08:51:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
25cb1c4
Sat 23 Mar 2024 08:51:26 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
b764457
Sat 23 Mar 2024 08:58:14 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
03b6a57
Sat 23 Mar 2024 09:02:26 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:122:18: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  122 |       push(pila, letra);
      |                  ^~~~~
      |                  |
      |                  char
In file included from exercises.c:2,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:126:17: error: assignment to ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  126 |       primLetra = top(pila);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
d108dd5
Sat 23 Mar 2024 09:03:29 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:126:17: error: assignment to ‘char *’ from ‘char’ makes pointer from integer without a cast [-Werror=int-conversion]
  126 |       primLetra = *(char *)top(pila);
      |                 ^
exercises.c:127:38: error: comparison between pointer and integer [-Werror]
  127 |       if ((letra == ')' && primLetra == '(') || (letra == ']' && primLetra == '[') || (letra == '}' && primLetra == '{'))
      |                                      ^~
exercises.c:127:76: error: comparison between pointer and integer [-Werror]
  127 |       if ((letra == ')' && primLetra == '(') || (letra == ']' && primLetra == '[') || (letra == '}' && primLetra == '{'))
      |                                                                            ^~
exercises.c:127:114: error: comparison between pointer and integer [-Werror]
  127 |       if ((letra == ')' && primLetra == '(') || (letra == ']' && primLetra == '[') || (letra == '}' && primLetra == '{'))
      |                                                                                                                  ^~
cc1: all warnings being treated as errors
Compilation failed
f8daef5
Sat 23 Mar 2024 09:03:53 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
3595540
